# dotbot

./: .gitignore  CHANGELOG.md  pyproject.toml
dotbot/: __init__.py  cli.py  config.py  context.py  dispatcher.py  plugin.py
dotbot/plugins/: clean.py  cond.py  create.py  link.py  shell.py
dotbot/util/: common.py  module.py
